sorter returns testClassesLists