@@ -3,12 +3,8 @@ package com.github.seregamorph.testsmartcontext.demo;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import com.github.seregamorph.testsmartcontext.SmartDirtiesTestsSorter;
-import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.LinkedHashMap;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 import org.junit.jupiter.api.Test;
 
 public class SmartDirtiesJupiterTestsSorterTest {
@@ -26,30 +22,15 @@ public class SmartDirtiesJupiterTestsSorterTest {
             new TestItem(NoBaseClass1IntegrationTest.class),
             new TestItem(SmartDirtiesJupiterTestsSorterTest.class)
         );
-        Map<Class<?>, Boolean> lastClassPerConfig = sorter.sort(testItems, testItem -> testItem.testClass);
+        var itClassesLists = sorter.sort(testItems, testItem -> testItem.testClass);
         System.out.println("<<<shouldSortAlphabeticallyAndGroupSameConfigurations<<<");
 
-        Map<Class<?>, Boolean> expectedLastClassPerConfig = new LinkedHashMap<>();
-        expectedLastClassPerConfig.put(Integration1Test.class, true);
-        expectedLastClassPerConfig.put(Integration2Test.class, true);
-        expectedLastClassPerConfig.put(NoBaseClass1IntegrationTest.class, false);
-        expectedLastClassPerConfig.put(NoBaseClass2IntegrationTest.class, true);
-        expectedLastClassPerConfig.put(SampleIntegrationTest.class, true);
-        assertEquals(expectedLastClassPerConfig, lastClassPerConfig);
-        assertEquals(
-            new ArrayList<>(expectedLastClassPerConfig.keySet()),
-            new ArrayList<>(lastClassPerConfig.keySet())
-        );
-
-        assertEquals(Arrays.asList(
-            SmartDirtiesJupiterTestsSorterTest.class,
-            Unit1Test.class,
-            Integration1Test.class,
-            Integration2Test.class,
-            NoBaseClass1IntegrationTest.class,
-            NoBaseClass2IntegrationTest.class,
-            SampleIntegrationTest.class
-        ), testItems.stream().map(testItem -> testItem.testClass).collect(Collectors.toList()));
+        assertEquals(List.of(
+            List.of(Integration1Test.class),
+            List.of(Integration2Test.class),
+            List.of(NoBaseClass1IntegrationTest.class, NoBaseClass2IntegrationTest.class),
+            List.of(SampleIntegrationTest.class)
+        ), itClassesLists);
     }
 
     private record TestItem(Class<?> testClass) {
